--- a/index.html
+++ b/index.html
@@ -25,17 +25,26 @@
     <main>
         <h1>Nefi Zambrano</h1>
 
-        <section class="card">
-            <h2>Sección 1</h2>
-            <img src="images/imagen1.png" alt="Descripción de la imagen 1">
-            <p>Texto de ejemplo para la sección 1.</p>
-        </section>
+<section class="card two-columns">
+    <div class="text">
+        <h2>About Me</h2>
+       <p>Hi! I’m Nefi Zambrano, a 20-year-old Ecuadorian with a passion for programming and creativity. I love drawing, writing poems, and exploring literature. I’m also very empathetic and enjoy helping others. In my free time, I go to the gym, exercise, ride my motorcycle, and spend time with my cats. I aspire to become a video game developer and I’m always learning new skills to achieve my dreams.</p>
 
-        <section class="card">
-            <h2>Sección 2</h2>
-            <img src="images/imagen2.png" alt="Descripción de la imagen 2">
-            <p>Texto de ejemplo para la sección 2.</p>
-        </section>
+    </div>
+    <div class="image">
+        <img src="images/nefijpg.jpg" alt="Foto de Nefi">
+    </div>
+</section>
+
+<section class="card two-columns">
+    <div class="text">
+        <h2>Hobbies & Interests</h2>
+ <p>I’m passionate about music and love playing the guitar. Cars fascinate me, and I enjoy reading both scriptures and books. I find joy in writing poetry and expressing myself through words. Beyond my creative side, I’m dedicated to staying active and healthy, and I enjoy pushing my limits in the gym. Programming and game development are not just my studies—they’re my future career and lifelong passion.</p>
+    </div>
+    <div class="image">
+         <img src="images/guitarra.jpg" alt="Imagen representando hobbies">
+    </div>
+</section>
     </main>
 
     <footer>
