--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,9 +14,9 @@
         <span id="course-title">WDD 131 – Dynamic Web Fundamentals</span>
         <nav>
             <ul>
-                <li><a href="https://www.linkedin.com/in/tu-perfil" target="_blank">LinkedIn</a></li>
-                <li><a href="https://byupw.instructure.com/" target="_blank">Canvas</a></li>
-                <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank">Scripture</a></li>
+                <li><a href="https://www.linkedin.com/in/nefi-geovanny-zambrano-miño-68074133b" target="_blank">LinkedIn</a></li>
+                <li><a href="https://byupw.instructure.com/" target="_blank" rel="noopener noreferrer">Canvas</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/study/scriptures" target="_blank" rel="noopener noreferrer">Scripture</a></li>
                 <li><a href="#">Final Project</a></li>
             </ul>
         </nav>
@@ -32,13 +32,13 @@
 
     </div>
     <div class="image">
-        <img src="images/nefijpg.jpg" alt="Foto de Nefi">
+        <img src="images/nefijpg.jpg" alt=" Nefi smile">
     </div>
 </section>
 
 <section class="card two-columns">
     <div class="text">
-        <h2>Hobbies & Interests</h2>
+        <h2>Hobbies and Interests</h2>
  <p>I’m passionate about music and love playing the guitar. Cars fascinate me, and I enjoy reading both scriptures and books. I find joy in writing poetry and expressing myself through words. Beyond my creative side, I’m dedicated to staying active and healthy, and I enjoy pushing my limits in the gym. Programming and game development are not just my studies—they’re my future career and lifelong passion.</p>
     </div>
     <div class="image">
