--- a/siteplan.html
+++ b/siteplan.html
@@ -13,14 +13,14 @@
 
     <!-- Lateral navigation for desktop -->
     <nav class="nav-lateral">
-        <ul>
-            <h1>Gaming Vault</h1>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Wiki</a></li>
-            <li><a href="#">News</a></li>
-            <li><a href="#">Tips and Guides</a></li>
-        </ul>
-    </nav>
+    <h1 class="logo-text">GAMING <br> VAULT</h1>
+    <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Wiki</a></li>
+        <li><a href="#">Noticias</a></li>
+        <li><a href="#">Tips</a></li>
+    </ul>
+</nav>
 
     <main>
         <!-- 1. Site Name -->
